Replace welcome video with presentation video

--- a/index.html
+++ b/index.html
@@ -412,22 +412,18 @@
         <p class="subtag" id="subtagTop">Solo, Trio or Band Performance</p>
       </div>
 
-      <!-- VIDEO -->
-      <div class="video-wrap">
-        <div class="video-controls">
-          <button class="mini-btn" id="muteBtn" type="button">🔇 Mute</button>
-        </div>
+      <!-- VIDEO DE PRESENTACIÓN -->
+<div class="video-wrap">
+  <iframe
+    class="video-inner"
+    src="https://www.youtube.com/shorts/c9RRfrlxovU=1"
+    title="Fabry Orihuela - Presentación"
+    frameborder="0"
+    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+    allowfullscreen>
+  </iframe>
+</div>
 
-        <div class="video-inner">
-          <iframe
-            id="welcomeVideo"
-            src="https://www.youtube.com/embed/jSR1ZkBSNHw?rel=0&modestbranding=1&playsinline=1&mute=1"
-            title="Fabry Orihuela - Welcome"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-            allowfullscreen>
-          </iframe>
-        </div>
-      </div>
 
       <!-- BOTONES debajo del video: Merch / Escucha mi música / Pedir canción en vivo -->
       <div class="menu">
