Fix YouTube video URL in index.html

--- a/index.html
+++ b/index.html
@@ -416,7 +416,7 @@
 <div class="video-wrap">
   <iframe
     class="video-inner"
-    src="https://www.youtube.com/shorts/c9RRfrlxovU=1"
+    src="https://www.youtube.com/shorts/c9RRfrlxovU"
     title="Fabry Orihuela - Presentación"
     frameborder="0"
     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
