Change video source to embed format
Updated video embed source for presentation.

--- a/index.html
+++ b/index.html
@@ -412,14 +412,14 @@
         <p class="subtag" id="subtagTop">Solo, Trio or Band Performance</p>
       </div>
 
-      <!-- VIDEO DE PRESENTACIÓN -->
+     <!-- VIDEO DE PRESENTACIÓN -->
 <div class="video-wrap">
   <iframe
     class="video-inner"
-    src="https://www.youtube.com/shorts/c9RRfrlxovU"
+    src="https://www.youtube.com/embed/c9RRfrlxovU?rel=0&modestbranding=1&playsinline=1"
     title="Fabry Orihuela - Presentación"
     frameborder="0"
-    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
     allowfullscreen>
   </iframe>
 </div>
