Update video presentation section in index.html

--- a/index.html
+++ b/index.html
@@ -412,17 +412,17 @@
         <p class="subtag" id="subtagTop">Solo, Trio or Band Performance</p>
       </div>
 
-     <!-- VIDEO DE PRESENTACIÓN -->
-<div class="video-wrap">
+     <!-- VIDEO PRESENTACIÓN FORMATO REEL -->
+<div class="reel-container">
   <iframe
-    class="video-inner"
     src="https://www.youtube.com/embed/c9RRfrlxovU?rel=0&modestbranding=1&playsinline=1"
-    title="Fabry Orihuela - Presentación"
+    title="Fabry Orihuela - Video Presentación"
     frameborder="0"
     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
     allowfullscreen>
   </iframe>
 </div>
+
 
 
       <!-- BOTONES debajo del video: Merch / Escucha mi música / Pedir canción en vivo -->
