--- a/index.html
+++ b/index.html
@@ -413,15 +413,18 @@
       </div>
 
      <!-- VIDEO PRESENTACIÓN FORMATO REEL -->
-<div class="reel-container">
-  <iframe
-    src="https://www.youtube.com/embed/c9RRfrlxovU?rel=0&modestbranding=1&playsinline=1"
-    title="Fabry Orihuela - Video Presentación"
-    frameborder="0"
-    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-    allowfullscreen>
-  </iframe>
+<div class="reel-center">
+  <div class="reel-container">
+    <iframe
+      src="https://www.youtube.com/embed/c9RRfrlxovU?rel=0&modestbranding=1&playsinline=1"
+      title="Fabry Orihuela - Video Presentación"
+      frameborder="0"
+      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+      allowfullscreen>
+    </iframe>
+  </div>
 </div>
+
 
 
 
