--- a/index.html
+++ b/index.html
@@ -472,7 +472,7 @@
   </div>
 
   <script>
-    // ===== VIDEO MUTE/UNMUTE (simple y fiable en iPhone: recarga iframe con mute=0/1) =====
+    // ===== VIDEO MUTE/UNMUTE ...
     const iframe = document.getElementById("welcomeVideo");
     const muteBtn = document.getElementById("muteBtn");
     let isMuted = true;
