--- a/musica.html
+++ b/musica.html
@@ -1,49 +1,151 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Música | Fabry Orihuela</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="styles.css?v=70001">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Fabry Orihuela | Music</title>
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;800&family=Playfair+Display:wght@500;600&display=swap" rel="stylesheet">
+
+  <link rel="stylesheet" href="styles.css?v=90002">
 </head>
 
 <body>
-  <div class="container">
+  <div class="wrap">
+
+    <!-- TOPBAR -->
+    <div class="topbar">
+      <div class="lang-switch" aria-label="Language switch">
+        <button id="btnEN" class="active" type="button">🇺🇸 EN</button>
+        <button id="btnES" type="button">🇪🇸 ES</button>
+      </div>
+
+      <div class="top-actions">
+        <a class="btn-metal btn-booking" href="booking.html">
+          <span>✉️</span><span data-i18n="bookingTop">Booking</span>
+        </a>
+
+        <a class="btn-metal" href="redes.html">
+          <span>📱</span><span data-i18n="socialTop">Social Media</span>
+        </a>
+      </div>
+    </div>
+
+    <!-- CARD -->
     <div class="card">
-
-      <img src="img/logo.png" alt="Fabry Orihuela" class="logo">
-
-      <h1>💿 Música / Contenido Digital</h1>
-      <p class="tagline">Escúchame en plataformas digitales</p>
+      <div class="brand">
+        <img class="logo" src="img/logo.png" alt="Fabry Orihuela Logo" />
+        <h1 class="name" data-i18n="pageTitle">Music</h1>
+        <p class="tagline" data-i18n="pageTagline">Listen on digital platforms</p>
+        <p class="subtag" data-i18n="pageSub">New releases + official links</p>
+      </div>
 
       <!-- SPOTIFY -->
-      <div class="merch-item" style="text-align:center;">
-        <h3>🟢 Spotify</h3>
-        <p>Escucha todas mis canciones y lanzamientos</p>
+      <div class="section">
+        <div class="section-head">
+          <div class="section-icon">🟢</div>
+          <div>
+            <div class="section-title">Spotify</div>
+            <div class="section-sub" data-i18n="spotifySub">Listen to all my songs and releases</div>
+          </div>
+        </div>
 
-        <a class="btn"
-           href="https://open.spotify.com/intl-es/artist/3gwUw97MMCSVKbFocMIz0a"
-           target="_blank" rel="noopener">
-          ▶️ Escuchar en Spotify
+        <a class="btn-metal btn-red" href="https://open.spotify.com/intl-es/artist/3gwUw97MMCSVKbFocMIz0a" target="_blank" rel="noopener">
+          ▶️ <span data-i18n="spotifyBtn">Open Spotify</span>
         </a>
       </div>
 
       <!-- APPLE MUSIC -->
-      <div class="merch-item" style="text-align:center;">
-        <h3>🍎 Apple Music</h3>
-        <p>Disponible también en Apple Music</p>
+      <div class="section">
+        <div class="section-head">
+          <div class="section-icon">🍎</div>
+          <div>
+            <div class="section-title">Apple Music</div>
+            <div class="section-sub" data-i18n="appleSub">Available on Apple Music</div>
+          </div>
+        </div>
 
-        <a class="btn"
-           href="https://music.apple.com/us/artist/fabricio-orihuela/1015171212"
-           target="_blank" rel="noopener">
-          ▶️ Escuchar en Apple Music
+        <a class="btn-metal btn-red" href="https://music.apple.com/us/artist/fabricio-orihuela/1015171212" target="_blank" rel="noopener">
+          ▶️ <span data-i18n="appleBtn">Open Apple Music</span>
         </a>
       </div>
 
-     
-      <a href="index.html" class="btn">⬅️ Volver</a>
+      <!-- VOLVER -->
+      <div class="menu" style="margin-top:14px;">
+        <a class="tile" href="index.html">
+          <div class="tile-left">
+            <div class="badge">⬅️</div>
+            <div class="tile-text">
+              <div class="tile-title" data-i18n="backTitle">Back</div>
+              <div class="tile-sub" data-i18n="backSub">Return to Home</div>
+            </div>
+          </div>
+          <div class="chev">›</div>
+        </a>
+      </div>
 
+      <div class="foot" data-i18n="footer">
+        Streaming links are official. <br>
+        If you want a specific song, request it live.
+      </div>
     </div>
   </div>
+
+  <script>
+    const t = {
+      en: {
+        bookingTop: "Booking",
+        socialTop: "Social Media",
+        pageTitle: "Music",
+        pageTagline: "Listen on digital platforms",
+        pageSub: "New releases + official links",
+        spotifySub: "Listen to all my songs and releases",
+        spotifyBtn: "Open Spotify",
+        appleSub: "Available on Apple Music",
+        appleBtn: "Open Apple Music",
+        backTitle: "Back",
+        backSub: "Return to Home",
+        footer: "Streaming links are official.<br>If you want a specific song, request it live."
+      },
+      es: {
+        bookingTop: "Booking",
+        socialTop: "Redes",
+        pageTitle: "Música / Contenido Digital",
+        pageTagline: "Escúchame en plataformas digitales",
+        pageSub: "Lanzamientos + links oficiales",
+        spotifySub: "Escucha todas mis canciones y lanzamientos",
+        spotifyBtn: "Abrir Spotify",
+        appleSub: "Disponible también en Apple Music",
+        appleBtn: "Abrir Apple Music",
+        backTitle: "Volver",
+        backSub: "Regresar al Home",
+        footer: "Links oficiales de streaming.<br>Si quieres una canción específica, pídela en vivo."
+      }
+    };
+
+    let lang = "en";
+    const btnEN = document.getElementById("btnEN");
+    const btnES = document.getElementById("btnES");
+
+    function applyLang(newLang){
+      lang = newLang;
+      document.documentElement.lang = (lang === "es") ? "es" : "en";
+      document.title = (lang === "es") ? "Fabry Orihuela | Música" : "Fabry Orihuela | Music";
+
+      document.querySelectorAll("[data-i18n]").forEach(el => {
+        const key = el.getAttribute("data-i18n");
+        if(t[lang][key]) el.innerHTML = t[lang][key];
+      });
+
+      btnEN.classList.toggle("active", lang === "en");
+      btnES.classList.toggle("active", lang === "es");
+    }
+
+    btnEN.addEventListener("click", () => applyLang("en"));
+    btnES.addEventListener("click", () => applyLang("es"));
+    applyLang("en");
+  </script>
 </body>
 </html>
