--- a/musica.html
+++ b/musica.html
@@ -147,5 +147,5 @@
     btnES.addEventListener("click", () => applyLang("es"));
     applyLang("en");
   </script>
-</body>
+</body> <body class="page-center">
 </html>
